--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 <button type="button" class="picture__next-button"><img src="img/icon_slide_next.png" alt="Next"></button>
             </div>
             <div class="sliderPrev button">
-                <button type="button" class="picture__next-button"><img src="img/icons_slide_prev.png" alt="Next"></button>
+                <button type="button" class="picture__next-button"><img src="img/icon_slide_prev.png" alt="Next"></button>
             </div>
             <div class="container__carousel-investors">
                 <div class="container__investors" id="smith">
@@ -144,7 +144,7 @@
                     <li class="article__news">
                         <div class="wrapper-news-images">
                             <div class="image__news">
-                                <img src="img/crypto_news_pictures/commercial_on_the_building_photo.png"
+                                <img src="img/commercial_on_the_building_photo.png"
                                     alt="Commercial On The Building Photo" width="120">
                             </div>
                         </div>
@@ -158,7 +158,7 @@
                     <li class="article__news">
                         <div class="wrapper-news-images">
                             <div class="image__news">
-                                <img src="img/crypto_news_pictures/coins_of_bitcoin_photo.png"
+                                <img src="img/coins_of_bitcoin_photo.png"
                                     alt="Coins Of Bitcoin Photo" width="120">
                             </div>
                         </div>
@@ -172,7 +172,7 @@
                     <li class="article__news">
                         <div class="wrapper-news-images">
                             <div class="image__news">
-                                <img src="img/crypto_news_pictures/iphone_on_papers.png" alt="Iphone On Papers"
+                                <img src="img/iphone_on_papers.png" alt="Iphone On Papers"
                                     width="120">
                             </div>
                         </div>
@@ -196,7 +196,7 @@
                     <li class="article__news">
                         <div class="wrapper-news-images">
                             <div class="image__news">
-                                <img src="img/financial_news_pictures/motherboard_photo.png" alt="Motherboard Photo"
+                                <img src="img/motherboard_photo.png" alt="Motherboard Photo"
                                     width="120">
                             </div>
                         </div>
@@ -210,7 +210,7 @@
                     <li class="article__news">
                         <div class="wrapper-news-images">
                             <div class="image__news">
-                                <img src="img/financial_news_pictures/crypto_exchange_chart_photo.png"
+                                <img src="img/crypto_exchange_chart_photo.png"
                                     alt="Сrypto Exchange Chart Photo" width="120">
                             </div>
                         </div>
@@ -224,7 +224,7 @@
                     <li class="article__news">
                         <div class="wrapper-news-images">
                             <div class="image__news">
-                                <img src="img/financial_news_pictures/coins_photo.png" alt="Coins Photo" width="120">
+                                <img src="img/coins_photo.png" alt="Coins Photo" width="120">
                             </div>
                         </div>
                         <div class="container__text-article-news">
@@ -247,7 +247,7 @@
                     <li class="article__news">
                         <div class="wrapper-news-images">
                             <div class="image__news">
-                                <img src="img/regulation_news_pictures/phone_in_hand_photo.png"
+                                <img src="img/phone_in_hand_photo.png"
                                     alt="Phone In Hand Photo" width="120">
                             </div>
                         </div>
@@ -261,7 +261,7 @@
                     <li class="article-news">
                         <div class="wrapper-news-images">
                             <div class="image__news">
-                                <img src="img/regulation_news_pictures/one_bitcoin_photo.png" alt="One Bitcoin Photo"
+                                <img src="img/one_bitcoin_photo.png" alt="One Bitcoin Photo"
                                     width="120">
                             </div>
                         </div>
@@ -275,7 +275,7 @@
                     <li class="article-news">
                         <div class="wrapper-news-images">
                             <div class="image__news">
-                                <img src="img/regulation_news_pictures/man_with_two_laptops.png"
+                                <img src="img/man_with_two_laptops.png"
                                     alt="Man With Two Laptops Photo" width="120">
                             </div>
                         </div>
